--- a/portfolio.html
+++ b/portfolio.html
@@ -51,135 +51,139 @@
     </header>
     <main>
       <!--Main section-->
-      <section>
-        <h1 hidden>Portfolio</h1>
-        <ul class="portfolio list">
-          <li class="porfolio-item">
-            <button class="portfolio-btn" type="button">All</button>
-          </li>
-          <li class="porfolio-item">
-            <button class="portfolio-btn" type="button">Web Site</button>
-          </li>
-          <li class="porfolio-item">
-            <button class="portfolio-btn" type="button">App</button>
-          </li>
-          <li class="porfolio-item">
-            <button class="portfolio-btn" type="button">Design</button>
-          </li>
-          <li class="porfolio-item">
-            <button class="portfolio-btn" type="button">Marketing</button>
-          </li>
-        </ul>
-        <ul class="portfolio-main list">
-          <li class="portfolio-main-item">
-            <a class="portfolio-main link" href=""
-              ><img
-                src="./images/porfolio/img-1.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-              />
-              <h2 class="portfolio-subtitle">Banking App Interface Concept</h2>
-              <p class="portfolio-text">App</p>
-            </a>
-          </li>
-          <li class="portfolio-main-item">
-            <a class="portfolio-main link" href=""
-              ><img
-                src="./images/porfolio/img-2.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
-              <h2 class="portfolio-subtitle">Cashless Payment</h2>
-              <p class="portfolio-text">Marketing</p>
-            </a>
-          </li>
-          <li class="portfolio-main-item">
-            <a class="portfolio-main link" href=""
-              ><img
-                src="./images/porfolio/img-3.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
-              <h2 class="portfolio-subtitle">Meditation App</h2>
-              <p class="portfolio-text">App</p>
-            </a>
-          </li>
-          <li class="portfolio-main-item">
-            <a class="portfolio-main link" href=""
-              ><img
-                src="./images/porfolio/img-4.jpg"
-                alt="Taxi Servise"
-                width="360"
-                height="300"
-              />
-              <h2 class="portfolio-subtitle">Taxi Service</h2>
-              <p class="portfolio-text">Marketing</p>
-            </a>
-          </li>
-          <li class="portfolio-main-item">
-            <a class="portfolio-main link" href=""
-              ><img
-                src="./images/porfolio/img-5.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
-              <h2 class="portfolio-subtitle">Screen Illustrations</h2>
-              <p class="portfolio-text">Design</p>
-            </a>
-          </li>
-          <li class="portfolio-main-item">
-            <a class="portfolio-main link" href=""
-              ><img
-                src="./images/porfolio/img-6.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
-              <h2 class="portfolio-subtitle">Online Courses</h2>
-              <p class="portfolio-text">Marketing</p>
-            </a>
-          </li>
-          <li class="portfolio-main-item">
-            <a class="portfolio-main link" href=""
-              ><img
-                src="./images/porfolio/img-7.jpg"
-                alt="Instagram Stories Concept"
-                width="360"
-                height="300"
-              />
-              <h2 class="portfolio-subtitle">Instagram Stories Concept</h2>
-              <p class="portfolio-text">Design</p>
-            </a>
-          </li>
-          <li class="portfolio-main-item">
-            <a class="portfolio-main link" href=""
-              ><img
-                src="./images/porfolio/img-8.jpg"
-                alt="Organic Food"
-                width="360"
-                height="300"
-              />
-              <h2 class="portfolio-subtitle">Organic Food</h2>
-              <p class="portfolio-text">Web Site</p>
-            </a>
-          </li>
-          <li class="portfolio-main-item">
-            <a class="portfolio-main link" href=""
-              ><img
-                src="./images/porfolio/img-9.jpg"
-                alt="Fresh Coffee"
-                width="360"
-                height="300"
-              />
-              <h2 class="portfolio-subtitle">Fresh Coffee</h2>
-              <p class="portfolio-text">Web Site</p>
-            </a>
-          </li>
-        </ul>
+      <section class="section portfolio">
+        <div class="container">
+          <h1 hidden>Portfolio</h1>
+          <ul class="portfolio list">
+            <li class="porfolio-item">
+              <button class="portfolio-btn" type="button">All</button>
+            </li>
+            <li class="porfolio-item">
+              <button class="portfolio-btn" type="button">Web Site</button>
+            </li>
+            <li class="porfolio-item">
+              <button class="portfolio-btn" type="button">App</button>
+            </li>
+            <li class="porfolio-item">
+              <button class="portfolio-btn" type="button">Design</button>
+            </li>
+            <li class="porfolio-item">
+              <button class="portfolio-btn" type="button">Marketing</button>
+            </li>
+          </ul>
+          <ul class="portfolio-main list">
+            <li class="portfolio-main-item">
+              <a class="portfolio-main link" href=""
+                ><img
+                  src="./images/porfolio/img-1.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="portfolio-subtitle">
+                  Banking App Interface Concept
+                </h2>
+                <p class="portfolio-text">App</p>
+              </a>
+            </li>
+            <li class="portfolio-main-item">
+              <a class="portfolio-main link" href=""
+                ><img
+                  src="./images/porfolio/img-2.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="portfolio-subtitle">Cashless Payment</h2>
+                <p class="portfolio-text">Marketing</p>
+              </a>
+            </li>
+            <li class="portfolio-main-item">
+              <a class="portfolio-main link" href=""
+                ><img
+                  src="./images/porfolio/img-3.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="portfolio-subtitle">Meditation App</h2>
+                <p class="portfolio-text">App</p>
+              </a>
+            </li>
+            <li class="portfolio-main-item">
+              <a class="portfolio-main link" href=""
+                ><img
+                  src="./images/porfolio/img-4.jpg"
+                  alt="Taxi Servise"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="portfolio-subtitle">Taxi Service</h2>
+                <p class="portfolio-text">Marketing</p>
+              </a>
+            </li>
+            <li class="portfolio-main-item">
+              <a class="portfolio-main link" href=""
+                ><img
+                  src="./images/porfolio/img-5.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="portfolio-subtitle">Screen Illustrations</h2>
+                <p class="portfolio-text">Design</p>
+              </a>
+            </li>
+            <li class="portfolio-main-item">
+              <a class="portfolio-main link" href=""
+                ><img
+                  src="./images/porfolio/img-6.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="portfolio-subtitle">Online Courses</h2>
+                <p class="portfolio-text">Marketing</p>
+              </a>
+            </li>
+            <li class="portfolio-main-item">
+              <a class="portfolio-main link" href=""
+                ><img
+                  src="./images/porfolio/img-7.jpg"
+                  alt="Instagram Stories Concept"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="portfolio-subtitle">Instagram Stories Concept</h2>
+                <p class="portfolio-text">Design</p>
+              </a>
+            </li>
+            <li class="portfolio-main-item">
+              <a class="portfolio-main link" href=""
+                ><img
+                  src="./images/porfolio/img-8.jpg"
+                  alt="Organic Food"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="portfolio-subtitle">Organic Food</h2>
+                <p class="portfolio-text">Web Site</p>
+              </a>
+            </li>
+            <li class="portfolio-main-item">
+              <a class="portfolio-main link" href=""
+                ><img
+                  src="./images/porfolio/img-9.jpg"
+                  alt="Fresh Coffee"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="portfolio-subtitle">Fresh Coffee</h2>
+                <p class="portfolio-text">Web Site</p>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- Footer section -->
