--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <section class="section doing">
         <div class="container">
           <h2 class="title">What are we doing</h2>
-          <ul class="section-doing list">
+          <ul class="section-doing-list">
             <li class="section-doing-item">
               <img
                 class="section-doing-img"
@@ -141,7 +141,7 @@
       <section class="section team">
         <div class="container">
           <h2 class="title">Our Team</h2>
-          <ul class="section-team list">
+          <ul class="section-team-list">
             <li class="section-team-item">
               <img
                 class="section-team-img"
