--- a/portfolio.html
+++ b/portfolio.html
@@ -12,49 +12,56 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <!--Normalize-->
+    <link
+      rel="stylesheet"
+      href="node_modules/modern-normalize/modern-normalize.css"
+    />
     <!--Custome styles-->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Header section  -->
     <header class="header">
-      <nav class="header-nav">
-        <a class="link logo" href="./index.html"
-          >Web<span class="logo-dark">Studio</span>
-        </a>
-        <ul class="header list">
-          <li class="header-item">
-            <a class="header-link link" href="./index.html">Studio</a>
-          </li>
-          <li class="header-item">
-            <a class="header-link link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li class="header-item">
-            <a class="header-link link" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="address">
-        <ul class="address-list list">
-          <li>
-            <a class="address-link link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="address-link link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="header-container container">
+        <nav class="header-nav">
+          <a class="link logo" href="./index.html"
+            >Web<span class="logo-dark">Studio</span>
+          </a>
+          <ul class="header-list">
+            <li class="header-item">
+              <a class="header-link link" href="./index.html">Studio</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="address">
+          <ul class="address-list list">
+            <li>
+              <a class="address-link link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="address-link link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <!--Main section-->
       <section class="section portfolio">
         <div class="container">
           <h1 hidden>Portfolio</h1>
-          <ul class="portfolio list">
+          <ul class="portfolio-list list">
             <li class="porfolio-item">
               <button class="portfolio-btn" type="button">All</button>
             </li>
@@ -188,13 +195,15 @@
     </main>
     <!-- Footer section -->
     <footer class="footer">
-      <a class="link logo" href="./index.html">
-        Web<span class="logo-light">Studio</span>
-      </a>
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="link logo" href="./index.html">
+          Web<span class="logo-light">Studio</span>
+        </a>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
