--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <!-- Advantages section -->
       <section class="section advantages">
         <div class="container">
-          <h2 hidden>Advantages</h2>
+          <h2 class="visually-hidden">Advantages</h2>
           <ul class="section-advantages list">
             <li class="section-advantages-item">
               <h3 class="subtitle">Strategy</h3>
