--- a/portfolio.html
+++ b/portfolio.html
@@ -13,10 +13,7 @@
       rel="stylesheet"
     />
     <!--Normalize-->
-    <link
-      rel="stylesheet"
-      href="node_modules/modern-normalize/modern-normalize.css"
-    />
+    <link rel="normalize" href="./css/modern-normalize.css" />
     <!--Custome styles-->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
