--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
     <!--Normalize-->
-    <link rel="normalize" href="./css/modern-normalize.css" />
+    <link rel="normalize" href="./css/modern-normalize.min.css" />
     <!--Custome styles-->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
