--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
       rel="stylesheet"
     />
     <!--Normalize-->
-    <link
-      rel="stylesheet"
-      href="node_modules/modern-normalize/modern-normalize.css"
+    <link rel="normalize" href="./css/modern-normalize.min.css" />
     />
     <!--Custome styles-->
     <link rel="stylesheet" href="./css/styles.css" />
