--- a/index.html
+++ b/index.html
@@ -147,8 +147,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="subtitle">Mark Guerrero</h3>
-              <p class="section-team-text">Product Designer</p>
+              <div class="expert">
+                <h3 class="subtitle">Mark Guerrero</h3>
+                <p class="section-team-text">Product Designer</p>
+              </div>
             </li>
             <li class="section-team-item">
               <img
@@ -158,8 +160,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="subtitle">Tom Ford</h3>
-              <p class="section-team-text">Frontend Developer</p>
+              <div class="expert">
+                <h3 class="subtitle">Tom Ford</h3>
+                <p class="section-team-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="section-team-item">
               <img
@@ -169,8 +173,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="subtitle">Camila Garcia</h3>
-              <p class="section-team-text">Marketing</p>
+              <div class="expert">
+                <h3 class="subtitle">Camila Garcia</h3>
+                <p class="section-team-text">Marketing</p>
+              </div>
             </li>
             <li class="section-team-item">
               <img
@@ -180,8 +186,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="subtitle">Daniel Wilson</h3>
-              <p class="section-team-text">UI Designer</p>
+              <div class="expert">
+                <h3 class="subtitle">Daniel Wilson</h3>
+                <p class="section-team-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
